sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:3: error: not found: value nbval
  nbval = getNombreValeurs();
  ^AlgBubbleSort1:4: error: not found: value nbval
  for(i <- 0 to nbval){
                ^AlgBubbleSort1:5: error: not found: value nbval
    for(j <- 0 to nbval-i){
                  ^